--- a/LCD_ADC - Acelerometro/output/plantilla_ITM_debug.build_log.htm
+++ b/LCD_ADC - Acelerometro/output/plantilla_ITM_debug.build_log.htm
@@ -22,11 +22,11 @@ Dialog DLL:      TCM.DLL V1.27.0.0
  
 <h2>Project:</h2>
 C:\Users\Robert Alexander\Documents\STMDiscovery\Proyectos\LCD_ADC - Acelerometro\plantilla_ITM_debug.uvprojx
-Project File Date:  05/20/2017
+Project File Date:  05/24/2017
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 4 (build 422)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Build target 'plantilla_ITM_debug'
+Rebuild target 'plantilla_ITM_debug'
 compiling main.c...
 ..\terceros\accelerometer\tm_stm32f4_spi.h(208): warning:  #1215-D: #warning directive: "SPI4 undefined. Please update library with STD drivers from ST.com"
   #warning "SPI4 undefined. Please update library with STD drivers from ST.com"
@@ -34,12 +34,62 @@ compiling main.c...
   #warning "SPI5 undefined. Please update library with STD drivers from ST.com"
 ..\terceros\accelerometer\tm_stm32f4_spi.h(218): warning:  #1215-D: #warning directive: "SPI6 undefined. Please update library with STD drivers from ST.com"
   #warning "SPI6 undefined. Please update library with STD drivers from ST.com"
-main.c(345): warning:  #111-D: statement is unreachable
+main.c(175): warning:  #111-D: statement is unreachable
      return(0);
 main.c: 4 warnings, 0 errors
+compiling system_stm32f4xx.c...
+compiling stm32f4xx_it.c...
+compiling fputc_debug.c...
+compiling stm32f4_discovery.c...
+compiling stm32f4xx_rcc.c...
+compiling misc.c...
+compiling stm32f4xx_gpio.c...
+compiling stm32f4xx_exti.c...
+assembling startup_stm32f4xx.s...
+compiling binario.c...
+..\terceros\binario\binario.c(27): warning:  #223-D: function "printf" declared implicitly
+     while(nr<16) {printf("%d",0); nr++;}
+..\terceros\binario\binario.c(35): warning:  #223-D: function "printf" declared implicitly
+     printf("%d",aux);//<-Al poner la llamada de impresion despues de la llamada
+..\terceros\binario\binario.c: 2 warnings, 0 errors
+compiling stm32f4xx_syscfg.c...
+compiling stm32f4xx_usart.c...
+compiling tm_stm32f4_hd44780.c...
+compiling tm_stm32f4_gpio.c...
+compiling tm_stm32f4_timer_properties.c...
+compiling tm_stm32f4_delay.c...
+compiling tm_stm32f4_adc.c...
+compiling stm32f4xx_adc.c...
+compiling tm_stm32f4_lis302dl_lis3dsh.c...
+..\terceros\accelerometer\tm_stm32f4_spi.h(208): warning:  #1215-D: #warning directive: "SPI4 undefined. Please update library with STD drivers from ST.com"
+  #warning "SPI4 undefined. Please update library with STD drivers from ST.com"
+..\terceros\accelerometer\tm_stm32f4_spi.h(213): warning:  #1215-D: #warning directive: "SPI5 undefined. Please update library with STD drivers from ST.com"
+  #warning "SPI5 undefined. Please update library with STD drivers from ST.com"
+..\terceros\accelerometer\tm_stm32f4_spi.h(218): warning:  #1215-D: #warning directive: "SPI6 undefined. Please update library with STD drivers from ST.com"
+  #warning "SPI6 undefined. Please update library with STD drivers from ST.com"
+..\terceros\accelerometer\tm_stm32f4_lis302dl_lis3dsh.c: 3 warnings, 0 errors
+compiling stm32f4xx_spi.c...
+compiling tm_stm32f4_spi.c...
+..\terceros\accelerometer\tm_stm32f4_spi.h(208): warning:  #1215-D: #warning directive: "SPI4 undefined. Please update library with STD drivers from ST.com"
+  #warning "SPI4 undefined. Please update library with STD drivers from ST.com"
+..\terceros\accelerometer\tm_stm32f4_spi.h(213): warning:  #1215-D: #warning directive: "SPI5 undefined. Please update library with STD drivers from ST.com"
+  #warning "SPI5 undefined. Please update library with STD drivers from ST.com"
+..\terceros\accelerometer\tm_stm32f4_spi.h(218): warning:  #1215-D: #warning directive: "SPI6 undefined. Please update library with STD drivers from ST.com"
+  #warning "SPI6 undefined. Please update library with STD drivers from ST.com"
+..\terceros\accelerometer\tm_stm32f4_spi.c: 3 warnings, 0 errors
+compiling hyperion.c...
+..\terceros\accelerometer\tm_stm32f4_spi.h(208): warning:  #1215-D: #warning directive: "SPI4 undefined. Please update library with STD drivers from ST.com"
+  #warning "SPI4 undefined. Please update library with STD drivers from ST.com"
+..\terceros\accelerometer\tm_stm32f4_spi.h(213): warning:  #1215-D: #warning directive: "SPI5 undefined. Please update library with STD drivers from ST.com"
+  #warning "SPI5 undefined. Please update library with STD drivers from ST.com"
+..\terceros\accelerometer\tm_stm32f4_spi.h(218): warning:  #1215-D: #warning directive: "SPI6 undefined. Please update library with STD drivers from ST.com"
+  #warning "SPI6 undefined. Please update library with STD drivers from ST.com"
+..\terceros\hyperion\hyperion.c(242): warning:  #1-D: last line of file ends without a newline
+  }
+..\terceros\hyperion\hyperion.c: 4 warnings, 0 errors
 linking...
-Program Size: Code=9132 RO-data=424 RW-data=144 ZI-data=1152  
-".\output\plantilla_ITM_debug.axf" - 0 Error(s), 4 Warning(s).
+Program Size: Code=9188 RO-data=424 RW-data=144 ZI-data=1152  
+".\output\plantilla_ITM_debug.axf" - 0 Error(s), 16 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -57,7 +107,7 @@ Package Vendor: ARM
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.0.1
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:14
 </pre>
 </body>
 </html>
